clh lock + tests with lincheck